<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:theme="@style/DonutTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context=".DonutsActivity">
    <Spinner
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:id="@+id/flavorOptions"
            android:theme="@style/Spinner"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="22dp" android:layout_marginEnd="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginTop="8dp"
            android:contentDescription="@string/android_contentdescription_stringD1"/>
    <Button
            android:text="@string/add_name_button"
            android:layout_width="150dp"
            android:layout_height="100dp" android:id="@+id/button"
            android:onClick="addDonut"
            android:theme="@style/Button" android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/quantity" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/flavorOptions"
            android:background="@color/buttonColor"
            android:contentDescription="@string/android_contentdescription_stringD2"/>
    <Button
            android:text="@string/remove_name_button"
            android:layout_width="150dp"
            android:layout_height="100dp" android:id="@+id/button2"
            android:onClick="removeDonut"
            android:theme="@style/Button" android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/subTotalDonuts" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintBottom_toTopOf="@+id/currentDonutsList"
            android:background="@color/buttonColor"
            android:contentDescription="@string/android_contentdescription_stringD3"/>
    <ListView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:id="@+id/currentDonutsList"
            android:theme="@style/ListView"
            android:listSelector="@color/colorAccent"
            android:choiceMode="singleChoice"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="22dp" android:layout_marginEnd="23dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button2"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/quantity"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button" android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@+id/flavorOptions"
            app:layout_constraintBottom_toTopOf="@+id/subTotalDonuts"
            android:hint="@string/quantity_hint"
            android:autofillHints="@string/quantity_autofill_hint"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="100dp" android:id="@+id/subTotalDonuts"
            android:text="@string/subtotal"
            android:theme="@style/TextView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button2" android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toTopOf="@+id/currentDonutsList"
            app:layout_constraintTop_toBottomOf="@+id/quantity"
            android:contentDescription="@string/android_contentdescription_stringD4" android:textAlignment="center"/>
    <Button
            android:text="@string/add_to_order_name_button"
            android:layout_width="350dp"
            android:layout_height="100dp"
            android:id="@+id/button3"
            android:onClick="addToOrder"
            android:theme="@style/Button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="22dp" android:layout_marginEnd="23dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/currentDonutsList"
            android:background="@color/buttonColor"/>
</androidx.constraintlayout.widget.ConstraintLayout>