<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/MainTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageButton
            android:layout_width="144dp"
            android:layout_height="144dp" app:srcCompat="@drawable/donut" android:id="@+id/donutOrder"
            android:layout_marginEnd="139dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="138dp"
            android:contentDescription="@string/android_contentdescription_stringM1" android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="554dp"
            android:scaleType="fitCenter"
            android:onClick="launchDonuts" android:background="@color/transparent"/>
    <ImageButton
            android:layout_width="144dp"
            android:layout_height="144dp" app:srcCompat="@drawable/coffee" android:id="@+id/coffeeOrder"
            android:layout_marginEnd="139dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="138dp"
            android:contentDescription="@string/android_contentdescription_stringM2" android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="200dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="386dp"
            android:scaleType="fitCenter"
            android:onClick="launchCoffee" android:background="@color/transparent"/>
    <ImageButton
            android:layout_width="144dp"
            android:layout_height="144dp" app:srcCompat="@drawable/addorder" android:id="@+id/addOrder"
            android:layout_marginEnd="139dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="138dp"
            android:contentDescription="@string/android_contentdescription_stringM3" android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="368dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="218dp"
            android:scaleType="fitCenter" android:theme="@style/ImageViewButton"
            android:onClick="launchAddOrder" android:background="@color/transparent"/>
    <ImageButton
            android:layout_width="144dp"
            android:layout_height="144dp" app:srcCompat="@drawable/orderlist" android:id="@+id/storeOrders"
            android:layout_marginEnd="139dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="138dp"
            android:contentDescription="@string/android_contentdescription_stringM4" android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="536dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="50dp"
            android:scaleType="fitCenter"
            android:onClick="launchStoreOrder" android:background="@color/transparent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
